--- a/app/components/new-chat.module.scss
+++ b/app/components/new-chat.module.scss
@@ -52,6 +52,13 @@
     animation: slide-in ease 0.4s;
   }
 
+  .qrcode-title {
+    font-size: 24px;
+    font-weight: bolder;
+    margin-bottom: 1vh;
+    animation: slide-in ease 0.1s;
+  }
+
   .actions {
     margin-top: 5vh;
     margin-bottom: 2vh;
