--- a/app/components/new-chat.module.scss
+++ b/app/components/new-chat.module.scss
@@ -55,7 +55,7 @@
   .qrcode-title {
     font-size: 24px;
     font-weight: bolder;
-    margin-bottom: 1vh;
+    margin-top: 1vh;
     animation: slide-in ease 0.1s;
   }
 
